refactior: change listing of pets

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -3,14 +3,15 @@
 
 <head>
     <title>Shelter</title>
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/01-header.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/02-first-screen.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/03-about.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/04-friends.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/05-help.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/06-donation.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/07-footer.css" />
+    <link rel="stylesheet" type="text/css" href="../../styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="../../styles/01-header.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/01-first-screen.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/02-about.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/03-friends.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/04-help.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/05-donation.css" />
+    <link rel="stylesheet" type="text/css" href="../../styles/pet-card.css" />
+    <link rel="stylesheet" type="text/css" href="../../styles/02-footer.css" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="theme-color" content="#ffffff" />
     <meta charset="utf-8" />
@@ -83,38 +84,38 @@
                 <h3>Our friends who<br /> are looking for a house</h3>
                 <section class="slider">
                     <section class="slider__container">
-                        <div class="slider__cards">
-                            <div class="slider__card">
+                        <ul class="slider__cards">
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Katrine</h4>
                                 <button>Learn more</button>
-                            </div>
-                            <div class="slider__card">
+                            </li>
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Jennifer</h4>
                                 <button>Learn more</button>
-                            </div>
-                            <div class="slider__card">
+                            </li>
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Woody</h4>
                                 <button>Learn more</button>
-                            </div>
-                            <div class="slider__card">
+                            </li>
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Sophia</h4>
                                 <button>Learn more</button>
-                            </div>
-                            <div class="slider__card">
+                            </li>
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Timmy</h4>
                                 <button>Learn more</button>
-                            </div>
-                        </div>
+                            </li>
+                        </ul>
                     </section>
                     <div class="slider__arrows">
                         <button class="slider__arrow slider__arrow_prev" disabled>
