--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -50,80 +50,84 @@
                 <h3>Our friends who<br /> are looking for a house</h3>
                 <section class="slider pets__slider">
                     <section class="slider__container">
-                        <div class="slider__cards">
-                            <div class="slider__card">
+                        <ul class="slider__cards">
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Katrine</h4>
                                 <button>Learn more</button>
-                            </div>
-                            <div class="slider__card">
+                            </li>
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Jennifer</h4>
                                 <button>Learn more</button>
-                            </div>
-                            <div class="slider__card">
+                            </li>
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Woody</h4>
                                 <button>Learn more</button>
-                            </div>
-                            <div class="slider__card">
+                            </li>
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Sophia</h4>
                                 <button>Learn more</button>
-                            </div>
-                            <div class="slider__card">
+                            </li>
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Timmy</h4>
                                 <button>Learn more</button>
-                            </div>
-                            <div class="slider__card">
+                            </li>
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Katrine</h4>
                                 <button>Learn more</button>
-                            </div>
-                            <div class="slider__card">
+                            </li>
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Jennifer</h4>
                                 <button>Learn more</button>
-                            </div>
-                            <div class="slider__card">
+                            </li>
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Woody</h4>
                                 <button>Learn more</button>
-                            </div>
-                            <div class="slider__card">
+                            </li>
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Sophia</h4>
                                 <button>Learn more</button>
-                            </div>
-                            <div class="slider__card">
+                            </li>
+                            <li class="slider__card">
                                 <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Timmy</h4>
                                 <button>Learn more</button>
-                            </div>
-                        </div>
+                            </li>
+                        </ul>
                     </section>
-                    <div class="slider__arrows"><button class="slider__arrow slider__arrow_prev" disabled>
-                            &lt;&lt;
+                    <div class="slider__arrows">
+                        <button class="slider__arrow slider__arrow_prev-double" disabled>
+                            <h4>&lt;&lt;</h4>
                         </button>
                         <button class="slider__arrow slider__arrow_prev" disabled>
-                            &lt;
+                            <h4>&lt;</h4>
                         </button>
+                        <div class="slider__page-num">
+                            <h4>1</h4>
+                        </div>
                         <button class="slider__arrow slider__arrow_next">
-                            &gt;
+                            <h4>&gt;</h4>
                         </button>
-                        <button class="slider__arrow slider__arrow_next">
-                            &gt;&gt;
+                        <button class="slider__arrow slider__arrow_next-double">
+                            <h4>&gt;&gt;</h4>
                         </button>
                     </div>
                 </section>
