fix: fixed layout

--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -21,23 +21,27 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo-container">
+            <a class="logo-container" href="http://127.0.0.1:5500/pages/main">
                 <h1>Cozy House</h1>
                 <p>Shelter for pets in Boston</p>
-            </div>
+            </a>
             <nav>
                 <ul>
                     <li>
-                        <a href="#about" class="paragraph-l active">About the shelter</a>
+                        <a href="http://127.0.0.1:5500/pages/main/#about"
+                            class="paragraph-l">About
+                            the
+                            shelter</a>
                     </li>
                     <li>
-                        <a href="#pets" class="paragraph-l">Our pets</a>
+                        <a href="#pets" class="paragraph-l  active">Our pets</a>
                     </li>
                     <li>
-                        <a href="help" class="paragraph-l">Help the shelter</a>
+                        <a href="http://127.0.0.1:5500/pages/main/#help"
+                            class="paragraph-l">Help the shelter</a>
                     </li>
                     <li>
-                        <a href="contacts" class="paragraph-l">Contacts</a>
+                        <a href="#contacts" class="paragraph-l">Contacts</a>
                     </li>
                 </ul>
 
@@ -52,72 +56,94 @@
                     <section class="slider__container">
                         <ul class="slider__cards">
                             <li class="slider__card">
-                                <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
+                                <img width="270" height="270"
+                                    src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Katrine</h4>
-                                <button>Learn more</button>
+                                <button class='slider__card-button'>Learn
+                                    more</button>
                             </li>
                             <li class="slider__card">
-                                <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
+                                <img width="270" height="270"
+                                    src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Jennifer</h4>
-                                <button>Learn more</button>
+                                <button class='slider__card-button'>Learn
+                                    more</button>
                             </li>
                             <li class="slider__card">
-                                <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
+                                <img width="270" height="270"
+                                    src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Woody</h4>
-                                <button>Learn more</button>
+                                <button class='slider__card-button'>Learn
+                                    more</button>
                             </li>
                             <li class="slider__card">
-                                <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
+                                <img width="270" height="270"
+                                    src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Sophia</h4>
-                                <button>Learn more</button>
+                                <button class='slider__card-button'>Learn
+                                    more</button>
                             </li>
                             <li class="slider__card">
-                                <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
+                                <img width="270" height="270"
+                                    src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Timmy</h4>
-                                <button>Learn more</button>
+                                <button class='slider__card-button'>Learn
+                                    more</button>
                             </li>
                             <li class="slider__card">
-                                <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
+                                <img width="270" height="270"
+                                    src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Katrine</h4>
-                                <button>Learn more</button>
+                                <button class='slider__card-button'>Learn
+                                    more</button>
                             </li>
                             <li class="slider__card">
-                                <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
+                                <img width="270" height="270"
+                                    src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Jennifer</h4>
-                                <button>Learn more</button>
+                                <button class='slider__card-button'>Learn
+                                    more</button>
                             </li>
                             <li class="slider__card">
-                                <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
+                                <img width="270" height="270"
+                                    src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Woody</h4>
-                                <button>Learn more</button>
+                                <button class='slider__card-button'>Learn
+                                    more</button>
                             </li>
                             <li class="slider__card">
-                                <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
+                                <img width="270" height="270"
+                                    src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Sophia</h4>
-                                <button>Learn more</button>
+                                <button class='slider__card-button'>Learn
+                                    more</button>
                             </li>
                             <li class="slider__card">
-                                <img width="270" height="270" src="../../assets/images/pets-jennifer.png"
+                                <img width="270" height="270"
+                                    src="../../assets/images/pets-jennifer.png"
                                     alt="pet-friend" />
                                 <h4>Timmy</h4>
-                                <button>Learn more</button>
+                                <button class='slider__card-button'>Learn
+                                    more</button>
                             </li>
                         </ul>
                     </section>
                     <div class="slider__arrows">
-                        <button class="slider__arrow slider__arrow_prev-double" disabled>
+                        <button class="slider__arrow slider__arrow_prev-double"
+                            disabled>
                             <h4>&lt;&lt;</h4>
                         </button>
-                        <button class="slider__arrow slider__arrow_prev" disabled>
+                        <button class="slider__arrow slider__arrow_prev"
+                            disabled>
                             <h4>&lt;</h4>
                         </button>
                         <div class="slider__page-num">
@@ -134,38 +160,56 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer id="contacts">
         <div class="container">
             <div class="footer__content">
                 <div class="col first-col">
                     <h3>For questions and suggestions</h3>
-                    <a class="footer-info-point" href="mailto: mlichlundiapl@gmail.com" target="_blank">
-                        <img width="40" height="32" src="../../assets/icons/icon-email.svg" alt="footer-info-email" />
+                    <a class="footer-info-point"
+                        href="mailto: mlichlundiapl@gmail.com" target="_blank">
+                        <img width="40" height="32"
+                            src="../../assets/icons/icon-email.svg"
+                            alt="footer-info-email" />
                         <h4>email@shelter.com</h4>
                     </a>
                     <a class="footer-info-point" href="tel: +1235678910">
-                        <img width="40" height="32" src="../../assets/icons/icon-phone.svg" alt="footer-info-email" />
+                        <img width="40" height="32"
+                            src="../../assets/icons/icon-phone.svg"
+                            alt="footer-info-email" />
                         <h4>+13 674 567 75 54</h4>
                     </a>
                 </div>
                 <div class="col sec-col">
                     <h3>We are waiting for your visit</h3>
-                    <a class="footer-info-point" href="https://goo.gl/maps/tZ6SEJfVfv26xeNE6" target="_blank">
-                        <img width="22" height="32" src="../../assets/icons/icon-marker.svg" alt="footer-info-email" />
-                        <h4>1 Central Street, Boston<br />(entrance from the store)</h4>
+                    <a class="footer-info-point"
+                        href="https://goo.gl/maps/tZ6SEJfVfv26xeNE6"
+                        target="_blank">
+                        <img width="22" height="32"
+                            src="../../assets/icons/icon-marker.svg"
+                            alt="footer-info-email" />
+                        <h4>1 Central Street, Boston<br />(entrance from the
+                            store)</h4>
                     </a>
-                    <a class="footer-info-point" href="https://goo.gl/maps/RsjPbakZDwpgBUDv5" target="_blank">
-                        <img width="22" height="32" src="../../assets/icons/icon-marker.svg" alt="footer-info-email" />
+                    <a class="footer-info-point"
+                        href="https://goo.gl/maps/RsjPbakZDwpgBUDv5"
+                        target="_blank">
+                        <img width="22" height="32"
+                            src="../../assets/icons/icon-marker.svg"
+                            alt="footer-info-email" />
                         <h4>18 South Park, London</h4>
                     </a>
                 </div>
                 <div class="col third-col">
-                    <img width="300" height="310" src="../../assets/images/footer-puppy.png" alt="footer-puppy" />
+                    <img width="300" height="310"
+                        src="../../assets/images/footer-puppy.png"
+                        alt="footer-puppy" />
                 </div>
             </div>
             <div class="grain"></div>
         </div>
     </footer>
+    <script src='../../scripts/menu.js'></script>
+    <script src='../../scripts/card.js'></script>
 </body>
 
 </html>
