fix: fixed errora and warns

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Shelter</title>
@@ -96,7 +96,7 @@
             <div class="container content__container">
                 <h3>Our friends who<br /> are looking for a house</h3>
                 <section class="slider">
-                    <section class="slider__container">
+                    <div class="slider__container">
                         <ul class="slider__cards">
                             <li class="slider__card">
                                 <img width="270" height="270"
@@ -139,7 +139,7 @@
                                     more</button>
                             </li>
                         </ul>
-                    </section>
+                    </div>
                     <div class="slider__arrows">
                         <button class="slider__arrow slider__arrow_prev"
                             disabled>
@@ -165,7 +165,7 @@
                                         fill="#292929" />
                                 </g>
                                 <defs>
-                                    <clipPath id="clip0_56784_408">
+                                    <clipPath id="clip_56784_408">
                                         <rect width="14" height="6"
                                             fill="white" />
                                     </clipPath>
@@ -271,13 +271,13 @@
                 <div class="col first-col">
                     <h3>For questions and suggestions</h3>
                     <a class="footer-info-point"
-                        href="mailto: mlichlundiapl@gmail.com" target="_blank">
+                        href="mailto:mlichlundiapl@gmail.com" target="_blank">
                         <img width="40" height="32"
                             src="../../assets/icons/icon-email.svg"
                             alt="footer-info-email" />
                         <h4>email@shelter.com</h4>
                     </a>
-                    <a class="footer-info-point" href="tel: +1235678910">
+                    <a class="footer-info-point" href="tel:+1235678910">
                         <img width="40" height="32"
                             src="../../assets/icons/icon-phone.svg"
                             alt="footer-info-email" />
