--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 
 <head>
     <title>Shelter</title>
@@ -52,12 +52,12 @@
         <section class="pets">
             <div class="container content__container">
                 <h3>Our friends who<br /> are looking for a house</h3>
-                <section class="slider pets__slider">
+                <div class="slider pets__slider">
                     <section class="slider__container">
                         <ul class="slider__cards">
                             <li class="slider__card">
                                 <img width="270" height="270"
-                                    src="../../assets/images/pets-jennifer.png"
+                                    src="../../assets/images/pets-katrine.png"
                                     alt="pet-friend" />
                                 <h4>Katrine</h4>
                                 <button class='slider__card-button'>Learn
@@ -73,7 +73,7 @@
                             </li>
                             <li class="slider__card">
                                 <img width="270" height="270"
-                                    src="../../assets/images/pets-jennifer.png"
+                                    src="../../assets/images/pets-woody.png"
                                     alt="pet-friend" />
                                 <h4>Woody</h4>
                                 <button class='slider__card-button'>Learn
@@ -81,7 +81,7 @@
                             </li>
                             <li class="slider__card">
                                 <img width="270" height="270"
-                                    src="../../assets/images/pets-jennifer.png"
+                                    src="../../assets/images/pets-sophia.png"
                                     alt="pet-friend" />
                                 <h4>Sophia</h4>
                                 <button class='slider__card-button'>Learn
@@ -89,7 +89,7 @@
                             </li>
                             <li class="slider__card">
                                 <img width="270" height="270"
-                                    src="../../assets/images/pets-jennifer.png"
+                                    src="../../assets/images/pets-timmy.png"
                                     alt="pet-friend" />
                                 <h4>Timmy</h4>
                                 <button class='slider__card-button'>Learn
@@ -97,25 +97,25 @@
                             </li>
                             <li class="slider__card">
                                 <img width="270" height="270"
-                                    src="../../assets/images/pets-jennifer.png"
+                                    src="../../assets/images/pets-charly.png"
                                     alt="pet-friend" />
-                                <h4>Katrine</h4>
+                                <h4>Charly</h4>
                                 <button class='slider__card-button'>Learn
                                     more</button>
                             </li>
                             <li class="slider__card">
                                 <img width="270" height="270"
-                                    src="../../assets/images/pets-jennifer.png"
+                                    src="../../assets/images/pets-scarlet.png"
                                     alt="pet-friend" />
-                                <h4>Jennifer</h4>
+                                <h4>Scarlett</h4>
                                 <button class='slider__card-button'>Learn
                                     more</button>
                             </li>
                             <li class="slider__card">
                                 <img width="270" height="270"
-                                    src="../../assets/images/pets-jennifer.png"
+                                    src="../../assets/images/pets-fredie.png"
                                     alt="pet-friend" />
-                                <h4>Woody</h4>
+                                <h4>Freddie</h4>
                                 <button class='slider__card-button'>Learn
                                     more</button>
                             </li>
@@ -140,23 +140,23 @@
                     <div class="slider__arrows">
                         <button class="slider__arrow slider__arrow_prev-double"
                             disabled>
-                            <h4>&lt;&lt;</h4>
+                            <span>&lt;&lt;</span>
                         </button>
                         <button class="slider__arrow slider__arrow_prev"
                             disabled>
-                            <h4>&lt;</h4>
+                            <span>&lt;</span>
                         </button>
                         <div class="slider__page-num">
-                            <h4>1</h4>
+                            <span>1</span>
                         </div>
                         <button class="slider__arrow slider__arrow_next">
-                            <h4>&gt;</h4>
+                            <span>&gt;</span>
                         </button>
                         <button class="slider__arrow slider__arrow_next-double">
-                            <h4>&gt;&gt;</h4>
+                            <span>&gt;&gt;</span>
                         </button>
                     </div>
-                </section>
+                </div>
             </div>
         </section>
     </main>
@@ -166,13 +166,13 @@
                 <div class="col first-col">
                     <h3>For questions and suggestions</h3>
                     <a class="footer-info-point"
-                        href="mailto: mlichlundiapl@gmail.com" target="_blank">
+                        href="mailto:mlichlundiapl@gmail.com" target="_blank">
                         <img width="40" height="32"
                             src="../../assets/icons/icon-email.svg"
                             alt="footer-info-email" />
                         <h4>email@shelter.com</h4>
                     </a>
-                    <a class="footer-info-point" href="tel: +1235678910">
+                    <a class="footer-info-point" href="tel:+1235678910">
                         <img width="40" height="32"
                             src="../../assets/icons/icon-phone.svg"
                             alt="footer-info-email" />
