fix: fixed links

--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -21,14 +21,15 @@
 <body>
     <header>
         <div class="container">
-            <a class="logo-container" href="http://127.0.0.1:5500/pages/main">
+            <a class="logo-container"
+                href="https://mlichlundia.github.io/shelter/pages/main">
                 <h1>Cozy House</h1>
                 <p>Shelter for pets in Boston</p>
             </a>
             <nav>
                 <ul>
                     <li>
-                        <a href="http://127.0.0.1:5500/pages/main/#about"
+                        <a href="https://mlichlundia.github.io/shelter/pages/main/#about"
                             class="paragraph-l">About
                             the
                             shelter</a>
@@ -37,7 +38,7 @@
                         <a href="#pets" class="paragraph-l  active">Our pets</a>
                     </li>
                     <li>
-                        <a href="http://127.0.0.1:5500/pages/main/#help"
+                        <a href="https://mlichlundia.github.io/shelter/pages/main/#help"
                             class="paragraph-l">Help the shelter</a>
                     </li>
                     <li>
