--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -21,7 +21,8 @@
 <body>
     <header>
         <div class="container">
-            <a class="logo-container" href="http://127.0.0.1:5500/pages/main">
+            <a class="logo-container"
+                href="https://mlichlundia.github.io/shelter/pages/main/">
                 <h1>Cozy House</h1>
                 <p>Shelter for pets in Boston</p>
             </a>
@@ -32,7 +33,8 @@
                             shelter</a>
                     </li>
                     <li>
-                        <a href="../pets/index.html" class="paragraph-l">Our
+                        <a href="https://mlichlundia.github.io/shelter/pages/pets"
+                            class="paragraph-l">Our
                             pets</a>
                     </li>
                     <li>
