--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -57,7 +57,7 @@
                         and nice puppy with an extremely wide
                         and open heart. He or she will love you more than
                         anybody else in the world, you will see!</p>
-                    <a href="../pets/index.html">Make a friend</a>
+                    <a href="#friends">Make a friend</a>
                 </div>
                 <img width="698" height="728"
                     src="../../assets/images/start-screen-puppy.png"
