--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </section>
-        <section class="friends">
+        <section class="friends" id="friends">
             <div class="container content__container">
                 <h3>Our friends who<br /> are looking for a house</h3>
                 <section class="slider">
