fix: fixed styles

--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../../styles/01-header.css" />
     <link rel="stylesheet" type="text/css" href="../../styles/02-footer.css" />
     <link rel="stylesheet" type="text/css" href="../../styles/pet-card.css" />
+    <link rel="stylesheet" type="text/css" href="../../styles/slider.css" />
 
     <link rel="stylesheet" type="text/css" href="./styles/01-header.css" />
     <link rel="stylesheet" type="text/css" href="./styles/pet-card.css" />
@@ -21,24 +22,23 @@
 <body>
     <header>
         <div class="container">
-            <a class="logo-container"
-                href="https://mlichlundia.github.io/shelter/pages/main">
+            <a class="logo-container" href="../main/index.html">
                 <h1>Cozy House</h1>
                 <p>Shelter for pets in Boston</p>
             </a>
             <nav>
                 <ul>
                     <li>
-                        <a href="https://mlichlundia.github.io/shelter/pages/main/#about"
-                            class="paragraph-l">About
+                        <a href="../main/index.html" class="paragraph-l">About
                             the
                             shelter</a>
                     </li>
                     <li>
-                        <a href="#pets" class="paragraph-l  active">Our pets</a>
+                        <a href="./index.html" class="paragraph-l  active">Our
+                            pets</a>
                     </li>
                     <li>
-                        <a href="https://mlichlundia.github.io/shelter/pages/main/#help"
+                        <a href="../main/index.html#help"
                             class="paragraph-l">Help the shelter</a>
                     </li>
                     <li>
