--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -5,6 +5,7 @@
     <title>Shelter</title>
     <link rel="stylesheet" type="text/css" href="../../styles/style.css" />
     <link rel="stylesheet" type="text/css" href="../../styles/01-header.css" />
+    <link rel="stylesheet" type="text/css" href="../../styles/slider.css" />
     <link rel="stylesheet" type="text/css"
         href="./styles/01-first-screen.css" />
     <link rel="stylesheet" type="text/css" href="./styles/02-about.css" />
@@ -21,20 +22,19 @@
 <body>
     <header>
         <div class="container">
-            <a class="logo-container"
-                href="https://mlichlundia.github.io/shelter/pages/main/">
+            <a class="logo-container" href="./index.html">
                 <h1>Cozy House</h1>
                 <p>Shelter for pets in Boston</p>
             </a>
             <nav>
                 <ul>
                     <li>
-                        <a href="#about" class="paragraph-l active">About the
+                        <a href="./index.html" class="paragraph-l active">About
+                            the
                             shelter</a>
                     </li>
                     <li>
-                        <a href="https://mlichlundia.github.io/shelter/pages/pets"
-                            class="paragraph-l">Our
+                        <a href="../pets/index.html" class="paragraph-l">Our
                             pets</a>
                     </li>
                     <li>
