--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -27,7 +27,7 @@
                 <p>Shelter for pets in Boston</p>
             </a>
             <nav>
-                <ul>
+                <ul class="nav__list_active">
                     <li>
                         <a href="../main/index.html" class="paragraph-l">About
                             the
@@ -45,8 +45,8 @@
                         <a href="#contacts" class="paragraph-l">Contacts</a>
                     </li>
                 </ul>
-
             </nav>
+            <button class="menu__burger"></button>
         </div>
     </header>
     <main>
