feat: fix burger functionality

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -27,7 +27,7 @@
                 <p>Shelter for pets in Boston</p>
             </a>
             <nav>
-                <ul class="nav__list_active">
+                <ul class="nav__list">
                     <li>
                         <a href="./index.html" class="paragraph-l active">About
                             the
