refactor: refactor and correct slider logic and cards fetching api

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -99,12 +99,14 @@
                 <h3>Our friends who<br /> are looking for a house</h3>
                 <section class="slider">
                     <div class="slider__container">
-                        <ul class="slider__cards">
-                        </ul>
+                        <div class="slider__cards">
+                            <ul class="slider__cards_prev"></ul>
+                            <ul class="slider__cards_main"></ul>
+                            <ul class="slider__cards_next"></ul>
+                        </div>
                     </div>
                     <div class="slider__arrows">
-                        <button class="slider__arrow slider__arrow_prev"
-                            disabled>
+                        <button class="slider__arrow slider__arrow_prev">
                             <svg width="14" height="6" viewBox="0 0 14 6"
                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_56784_408)">
