feat: add slider to pets

--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="./styles/01-header.css" />
     <link rel="stylesheet" type="text/css" href="./styles/pet-card.css" />
     <link rel="stylesheet" type="text/css" href="./styles/02-pets.css" />
+    <link rel="stylesheet" type="text/css" href="../../styles/03-pop-up.css" />
 
 
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -56,7 +57,7 @@
                 <div class="slider pets__slider">
                     <section class="slider__container">
                         <ul class="slider__cards">
-                            <li class="slider__card">
+                            <!-- <li class="slider__card">
                                 <img width="270" height="270"
                                     src="../../assets/images/pets-katrine.png"
                                     alt="pet-friend" />
@@ -135,7 +136,7 @@
                                 <h4>Timmy</h4>
                                 <button class='slider__card-button'>Learn
                                     more</button>
-                            </li>
+                            </li> -->
                         </ul>
                     </section>
                     <div class="slider__arrows">
@@ -210,6 +211,8 @@
     </footer>
     <script src='../../scripts/menu.js'></script>
     <script src='../../scripts/card.js'></script>
+    <script type="module" src='./slider.js'></script>
+
 </body>
 
 </html>
